【修改】驗證拆分【新增】validator格式驗證
